Fix: RecruitIntegrationTest - 데이터셋 개수에 영향을 받지 않도록 코드 수정